# ai-narrative-system

./: .env.example  .gitignore  Dockerfile  Evaluation_Rubric.md  Gen_AI_Problem_Statement.md  JUDGE_EVALUATION.md  README.md  Technical_Report.md  Technical_Report.tex  compare.md  do's n don's.md  implementation.md  implemented.md  package-lock.json  package.json  prompts.jsonl  pyproject.toml  requirements.txt
Hackthon_Frontend_IBA/frontend/: index.html  package-lock.json  package.json
Hackthon_Frontend_IBA/frontend/src/: App.jsx  index.css
docs/superpowers/plans/: 2026-05-21-tts.md
docs/superpowers/specs/: 2026-05-21-tts-design.md
examples/rickshaw_accident/: character_configs.json  seed_story.json
src/: actions.py  api.py  config.py  main.py  schemas.py  story_state.py
src/agents/: base_agent.py  character_agent.py  director_agent.py  reviewer_agent.py
src/graph/: narrative_graph.py
src/prompts/: character_prompts.py  director_prompts.py
